--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -8,3 +9,5 @@
 # Local History for Visual Studio Code
 .history/
 .vscode/
+bin/
+obj/
