Try changeing working directory

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,6 +18,7 @@ jobs:
            dotnet-version: '5.0.x'
       
       - name: Restore dependencies 🛠
+        working-directory: ./newsagency.api
         run: dotnet restore
       
       - name: Build app 🚀
