--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,11 +17,10 @@ jobs:
         with:
            dotnet-version: '5.0.x'
       
-      - name: Change the Working Directory 🔀
-        run: cd ./newsagency.api
-
       - name: Restore dependencies 🛠
+        working-directory: ./newsagency.api
         run: dotnet restore
       
       - name: Build app 🚀
+        working-directory: ./newsagency.api      
         run: dotnet build -c Release --no-restore
