Introduce new projects to the solution

--- a/papers/paper-service/Properties/launchSettings.json
+++ b/papers/paper-service/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14998",
-      "sslPort": 44371
+      "applicationUrl": "http://localhost:3278",
+      "sslPort": 44365
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "newsagency.api": {
+    "paper_service": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
