--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -20,9 +20,9 @@ jobs:
            dotnet-version: '5.0.x'
       
       - name: Restore dependencies 🛠
-        working-directory: ./papers/paper-service
+        working-directory: ./papers/PaperService
         run: dotnet restore
       
       - name: Build app 🚀
-        working-directory: ./papers/paper-service      
+        working-directory: ./papers/PaperService      
         run: dotnet build -c Release --no-restore
