--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -20,9 +20,12 @@ jobs:
            dotnet-version: '5.0.x'
       
       - name: Restore dependencies 🛠
-        working-directory: ./papers/PaperService
+        working-directory: ./papers
         run: dotnet restore
       
       - name: Build app 🚀
-        working-directory: ./papers/PaperService      
+        working-directory: ./papers      
         run: dotnet build -c Release --no-restore
+
+      #- name: Run Automated Tests 🧪
+      #  working-directory: ./papers/PaperService  
