--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIR: ./papers
     steps:
       - name: Check out code of Paper Service  👩‍💻
         uses: actions/checkout@v2
@@ -20,13 +22,13 @@ jobs:
            dotnet-version: '5.0.x'
       
       - name: Restore dependencies 🛠
-        working-directory: ./papers
+        working-directory: ${{ env.WORKING_DIR }}
         run: dotnet restore
       
       - name: Build app 🚀
-        working-directory: ./papers      
+        working-directory: ${{ env.WORKING_DIR }}      
         run: dotnet build -c Release --no-restore
 
       - name: Run Automated Tests 🧪
-        working-directory: ./papers
+        working-directory: ${{ env.WORKING_DIR }}
         run: dotnet test -c Release --no-build  
