Add solution file to lottery project and introduce unit test into the build pipeline

--- a/.github/workflows/lottery-service-cicd.yaml
+++ b/.github/workflows/lottery-service-cicd.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIR: ./lottery
     steps:
       - name: Check out code of Lottery Service 👩‍💻
         uses: actions/checkout@v2
@@ -20,9 +22,13 @@ jobs:
           dotnet-version: '5.0.x'
       
       - name: Restore dependencies 🛠
-        working-directory: ./lottery/LotteryService
+        working-directory: ${{ env.WORKING_DIR }}
         run: dotnet restore
 
       - name: Build Lottery Service App 🚀
-        working-directory: ./lottery/LotteryService
+        working-directory: ${{ env.WORKING_DIR }}
         run: dotnet build -c Release --no-restore
+
+      - name: Run Automated Tests 🧪
+        working-directory: ${{ env.WORKING_DIR }}
+        run: dotnet test -c Release --no-build        
