--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -1,4 +1,4 @@
-name: NewsAgency - Paper service CI/CD pipeline
+name : NewsAgency - Paper service Docker CI/CD pipeline
 
 on:
   push:
@@ -13,22 +13,6 @@ jobs:
     env:
       WORKING_DIR: ./papers
     steps:
-      - name: Check out code of Paper Service  👩‍💻
+      - name: Build the docker image 🚢 
         uses: actions/checkout@v2
-
-      - name: Setup .NET 5 ⚡
-        uses: actions/setup-dotnet@v1
-        with:
-           dotnet-version: '5.0.x'
-      
-      - name: Restore dependencies 🛠
-        working-directory: ${{ env.WORKING_DIR }}
-        run: dotnet restore
-      
-      - name: Build app 🚀
-        working-directory: ${{ env.WORKING_DIR }}      
-        run: dotnet build -c Release --no-restore
-
-      - name: Run Automated Tests 🧪
-        working-directory: ${{ env.WORKING_DIR }}
-        run: dotnet test -c Release --no-build  
+        run: docker builld -t ranga/paperservice:$(date +%s) .
