--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -13,6 +13,8 @@ jobs:
     env:
       WORKING_DIR: ./papers
     steps:
-      - name: Build the docker image 🚢 
+      - name: Checkout code ✅ 
         uses: actions/checkout@v2
+        
+      - name: Build the docker image ✨
         run: docker builld -t ranga/paperservice:$(date +%s) .
