--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -13,9 +13,30 @@ jobs:
     env:
       WORKING_DIR: ./papers
     steps:
-      - name: Checkout code ✅ 
+      - name: Check out code of Paper Service  👩‍💻
         uses: actions/checkout@v2
 
-      - name: Build the docker image ✨
+      - name: Setup .NET 5 ⚡
+        uses: actions/setup-dotnet@v1
+        with:
+           dotnet-version: '5.0.x'
+      
+      - name: Restore dependencies 🛠
         working-directory: ${{ env.WORKING_DIR }}
-        run: docker builld -t ranga/paperservice:$(date +%s) .
+        run: dotnet restore
+      
+      - name: Build app 🚀
+        working-directory: ${{ env.WORKING_DIR }}      
+        run: dotnet build -c Release --no-restore
+
+      - name: Run Automated Tests 🧪
+        working-directory: ${{ env.WORKING_DIR }}
+        run: dotnet test -c Release --no-build  
+      
+      #- name: Checkout code ✅ 
+      #  uses: actions/checkout@v2
+
+      #- name: Build the docker image ✨
+      #  working-directory: ${{ env.WORKING_DIR }}
+      #  run: docker builld -t ranga/paperservice:$(date +%s) .
+
