Complete revert to check the issue

--- a/.github/workflows/lottery-service-cicd.yaml
+++ b/.github/workflows/lottery-service-cicd.yaml
@@ -1,34 +1,34 @@
-name: NewsAgency - Lottery service CI/CD pipeline
+name: NewsAgency - Paper service CI/CD pipeline
 
 on:
   push:
     branches:
       - main
     paths:
-      - lottery/**
+      - papers/**
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      WORKING_DIR: ./lottery
+      WORKING_DIR: ./papers
     steps:
-      - name: Check out code of Lottery Service 👩‍💻
+      - name: Check out code of Paper Service  👩‍💻
         uses: actions/checkout@v2
 
       - name: Setup .NET 5 ⚡
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.x'
+           dotnet-version: '5.0.x'
       
       - name: Restore dependencies 🛠
         working-directory: ${{ env.WORKING_DIR }}
         run: dotnet restore
-
-      - name: Build Lottery Service App 🚀
-        working-directory: ${{ env.WORKING_DIR }}
+      
+      - name: Build app 🚀
+        working-directory: ${{ env.WORKING_DIR }}      
         run: dotnet build -c Release --no-restore
 
       - name: Run Automated Tests 🧪
         working-directory: ${{ env.WORKING_DIR }}
-        run: dotnet test -c Release --no-build        
+        run: dotnet test -c Release --no-build  
