--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -18,13 +18,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the docker image ✨
-        working-directory: ${{ env.WORKING_DIR }}
-        #run: docker build -t ${{ env.IMAGE_NAME }} .
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: Dockerfile
+          dockerfile: ${{ env.WORKING_DIR }}/Dockerfile
           repository: ranga/newsagency
           tag_with_ref: true
         
