--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ${{ env.WORKING_DIR }}/Dockerfile
+          dockerfile: Dockerfile
           repository: ranga/newsagency
           tag_with_ref: true
         
