--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the docker image ✨
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
+        working-directory: ${{ env.WORKING_DIR }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
