--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -13,18 +13,26 @@ jobs:
     env:
       WORKING_DIR: ./papers
       IMAGE_NAME: paperservice:latest
-    steps:
-      - name: Checkout code ✅ 
-        uses: actions/checkout@v2
 
-      - name: Build the docker image ✨
-        uses: docker/build-push-action@v2
+      steps:
+      - name: Set up QEMU ✅ 
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx 
+        uses: docker/setup-buildx-action@v1
+      
+      - name : Loging to Docker Hub
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: Dockerfile
-          repository: ranga/newsagency
-          tag_with_ref: true
+
+      - name: Build and push ✨
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ranga/newsagency:latest
         
       #- name: Publish to Registry
       #  uses: elgohr/Publish-Docker-Github-Action@master
