--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -15,25 +15,18 @@ jobs:
       IMAGE_NAME: paperservice:latest
 
     steps:
-      - name: Set up QEMU ✅ 
-        uses: docker/setup-qemu-action@v1
+      - name: Check out code ✅ 
+        uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx 
-        uses: docker/setup-buildx-action@v1
-      
-      - name : Loging to Docker Hub
-        uses: docker/login-action@v1 
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v5
         with:
+          image: ranga/newsagency
+          tag: v1, latest
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push ✨
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ranga/newsagency:latest
-        
       #- name: Publish to Registry
       #  uses: elgohr/Publish-Docker-Github-Action@master
       # with:
