--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -20,11 +20,12 @@ jobs:
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
+        working-directory: ${{ env.WORKING_DIR }}
         with:
           image: ranga/newsagency
           tag: v1, latest
           registry: docker.io
-          dockerfile: ${{ env.IMAGE_NAME }}/Dickerfile
+          dockerfile: Dickerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
