--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - papers/**
+    #paths:
+    #  - papers/**
 
 jobs:
   build:
@@ -20,12 +20,11 @@ jobs:
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
-        working-directory: ${{ env.WORKING_DIR }}
         with:
           image: ranga/newsagency
           tag: v1, latest
           registry: docker.io
-          dockerfile: Dickerfile
+          dockerfile: ./papers/Dickerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
