--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -24,7 +24,7 @@ jobs:
           image: ranga/newsagency
           tag: v1, latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: ./papers/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
