--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -15,22 +15,24 @@ jobs:
       IMAGE_NAME: paperservice:latest
 
     steps:
-      - name: Check out code ✅ 
-        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-      - name: Build & push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v5
+      - name: Set up Docker Buildx 
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          image: ranga/newsagency
-          tag: v1, latest
-          registry: docker.io
-          dockerfile: ./papers/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build and pushed
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ranga/newsagency:latest
 
-      #- name: Publish to Registry
-      #  uses: elgohr/Publish-Docker-Github-Action@master
-      # with:
-      #    name: ${{ env.IMAGE_NAME }}
-      #    username: ${{ secrets.DOCKER_USERNAME }}
-      #    password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
