--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -15,6 +15,9 @@ jobs:
       IMAGE_NAME: paperservice:latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
