--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           context: ./papers
           push: true
-          tags: ranga/newsagency:latest
+          tags: ranga/newsagency-paperservice:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
