--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -13,22 +13,28 @@ jobs:
     env:
       WORKING_DIR: ./grocery
     steps:
-      - name: Check out code of Grocery Service 👩‍💻
+      - name: Check out code of Grocery Service
         uses: actions/checkout@v2
 
-      - name: Setup .NET 5 ⚡
-        uses: actions/setup-dotnet@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          dotnet-version: '5.0.x'
-      
-      - name: Restore dependencies 🛠
-        working-directory: ${{ env.WORKING_DIR }}
-        run: dotnet restore
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Grocery Service App 🚀
-        working-directory: ${{ env.WORKING_DIR }}
-        run: dotnet build -c Release --no-restore
+      - name: Build and pushed
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./grocery
+          push: true
+          tags: ranga/newsagency-groceryservice:latest
 
-      - name: Run Automated Tests 🧪
-        working-directory: ${{ env.WORKING_DIR }}
-        run: dotnet test -c Release --no-build
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
