--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -15,6 +15,11 @@ jobs:
       IMAGE_NAME: paperservice:latest
 
     steps:
+      - name: Generate Bild number
+        uses: einaregilsson/build-number@v3
+        with:
+          token: ${{secrets.github_token}}
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -36,7 +41,7 @@ jobs:
         with:
           context: ./papers
           push: true
-          tags: ranga/newsagency-paperservice:latest
+          tags: ranga/newsagency-paperservice:${{ steps.buildnumber.outputs.build_number }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
