--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -41,7 +41,7 @@ jobs:
         with:
           context: ./papers
           push: true
-          tags: ranga/newsagency-paperservice:${{ steps.buildnumber.outputs.build_number }}
+          tags: ranga/newsagency-paperservice-${{ steps.buildnumber.outputs.build_number }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
