--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -34,14 +34,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+      - name: Print Build version 
+        echo: ${{ steps.buildnumber.outputs.build_number }}
+        
       - name: Build and pushed
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./papers
           push: true
-          tags: ranga/newsagency-paperservice-${{ steps.buildnumber.outputs.build_number }}
+          tags: ranga/newsagency-paperservice:paper-service-1
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
