--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -34,8 +34,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Print Build version 
-        run: echo ${{ steps.buildnumber.outputs.build_number }}
 
       - name: Build and pushed
         id: docker_build
@@ -43,7 +41,7 @@ jobs:
         with:
           context: ./papers
           push: true
-          tags: ranga/newsagency-paperservice:paper-service-1
+          tags: ranga/newsagency-paperservice:paper-service-${{ steps.buildnumber.outputs.build_number }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
