Introduce a job for deployment in the CI/CD yaml

--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -44,3 +44,9 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Testing second job
+        run: echo "Deploy sample step"
