Setup job sequence

--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -46,6 +46,7 @@ jobs:
         run: echo ${{ steps.docker_build.outputs.digest }}
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Testing second job
