--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -19,16 +19,16 @@ jobs:
         with:
           token: ${{secrets.github_token}}
 
-      - name: Check out code of Grocery Service
+      - name: Checkout code of Grocery Service ✅
         uses: actions/checkout@v2
 
-      - name: Login to DockerHub
+      - name: Login to DockerHub 🔒
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and pushed
+      - name: Build and pushed 🛠 📢
         id: docker_build
         uses: docker/build-push-action@v2
         with:
