--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -21,22 +21,16 @@ jobs:
         with:
           token: ${{secrets.github_token}}
 
-      - name: Checkout
+      - name: Checkout code of Paper Service ✅
         uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx 
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
+      - name: Login to DockerHub 🔒
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and pushed
+      - name: Build and pushed 🛠 📢
         id: docker_build
         uses: docker/build-push-action@v2
         with:
