--- a/.github/workflows/lottery-service-cicd.yaml
+++ b/.github/workflows/lottery-service-cicd.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Checkout code of Lottery Service ✅
         uses: actions/checkout@v2
 
+      - name: Set up Buildx 📐
+        uses: docker/setup-buildx-action@v1
+        
       - name: Login to DockerHub 🔒
         uses: docker/login-action@v1
         with:
