--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Checkout code of Paper Service ✅
         uses: actions/checkout@v2
 
+      - name: Set up Buildx 📐
+        uses: docker/setup-buildx-action@v1
+
       - name: Login to DockerHub 🔒
         uses: docker/login-action@v1
         with:
