--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -35,7 +35,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./grocery
+          context: ./grocery # define the path to the Dockerfile
           push: true
           tags: ranga/newsagency-groceryservice:grocery-service-${{ steps.buildnumber.outputs.build_number }}
 
