--- a/.github/workflows/lottery-service-cicd.yaml
+++ b/.github/workflows/lottery-service-cicd.yaml
@@ -35,7 +35,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./lottery
+          context: ./lottery # define the path to the Dockerfile
           push: true
           tags: ranga/newsagency-lotteryservice:lottery-service-${{ steps.buildnumber.outputs.build_number }}
 
