--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -37,7 +37,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./papers
+          context: ./papers # define the path to the Dockerfile
           push: true
           tags: ranga/newsagency-paperservice:paper-service-${{ steps.buildnumber.outputs.build_number }}
 
