--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - papers/**
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -39,7 +41,7 @@ jobs:
         with:
           context: ./papers # define the path to the Dockerfile
           push: true
-          tags: ranga/newsagency-paperservice:paper-service-${{ steps.buildnumber.outputs.build_number }}
+          tags: ranga/newsagency-paperservice:paper-service-${GITHUB_REF#refs/tags}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
