--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -39,7 +39,7 @@ jobs:
         with:
           context: ./grocery # define the path to the Dockerfile
           push: true
-          tags: ranga/newsagency-groceryservice:grocery-service-${GITHUB_REF#refs/tags}
+          tags: ranga/newsagency-groceryservice:${GITHUB_REF#refs/tags}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
