--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -33,13 +33,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Print the tag
+        id: get_tag
+        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+
       - name: Build and pushed 🛠 📢
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./grocery # define the path to the Dockerfile
-          push: true
           tags: ranga/newsagency-groceryservice:${GITHUB_REF#refs/tags}
+          push: true
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
