--- a/.github/workflows/paper-service-cicd.yaml
+++ b/.github/workflows/paper-service-cicd.yaml
@@ -35,13 +35,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Set the tag into a veriable 🚦
+        id: release_version 
+        run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+
       - name: Build and pushed 🛠 📢
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./papers # define the path to the Dockerfile
           push: true
-          tags: ranga/newsagency-paperservice:${GITHUB_REF#refs/tags}
+          tags: ranga/newsagency-paperservice:paperservice-${{ steps.release_version.outputs.RELEASE_VERSION }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
