--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -33,7 +33,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set the tag into a veriable
+      - name: Set the tag into a veriable 🚦
         id: release_version
         run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
 
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./grocery # define the path to the Dockerfile
-          tags: ranga/newsagency-groceryservice:groceryservice-${{GITHUB_REF#refs/*/}} #${{ steps.release_version.outputs.RELEASE_VERSION }}
+          tags: ranga/newsagency-groceryservice:groceryservice-${{ steps.release_version.outputs.RELEASE_VERSION }}
           push: true
 
       - name: Image digest
