--- a/.github/workflows/grocery-service-cicd.yaml
+++ b/.github/workflows/grocery-service-cicd.yaml
@@ -37,7 +37,7 @@ jobs:
         id: release_version
         run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
 
-      - name: Build and pushed 🛠 📢
+      - name: Build and Push image 🛠 📢
         id: docker_build
         uses: docker/build-push-action@v2
         with:
