--- a/.github/workflows/agency-manager-cicd.yaml
+++ b/.github/workflows/agency-manager-cicd.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Set the tag into a variable 🚦
         id: release_version
-        run: echo ::set-output name=RELEASE_VERSION::${{GITHUB_REF#refs/*/}}
+        run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
 
       - name: Build and Push image
         id: docker_build
