--- a/.github/workflows/agency-manager-cicd.yaml
+++ b/.github/workflows/agency-manager-cicd.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set the tag into a variable 🚦
         id: release_version
